STREET-3850: Feature click no longer shifts camera, usability fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,3 +328,10 @@
 .dart-panel .jimu-widget-frame.jimu-container #panoramaViewerDiv .cmt .measurement-floating-panel .warning span {
     color: #ec7a08 !important
 }
+
+.esriPopupWrapper .titlePane {
+    cursor: move;
+}
+.esriPopupWrapper .pointer {
+    display: none !important;
+}
